initial distribution: buffer stock

--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -23,15 +23,15 @@
     "MC_num = 200 # number of Monte Carlo simulations\n",
     "C_num_grid = (20,50,100,200) # number of grid points in consumption grid i iEGM\n",
     "specs = { # common specifications across methods\n",
-    "    'rho':1.5,\n",
+    "    'rho':1.5,      # constant relative risk aversion coefficient\n",
     "\n",
-    "    'max_C':10.0,\n",
-    "    'max_m':5.0,\n",
+    "    'num_m':100,    # number of points in the single state: normalized resources\n",
+    "    'max_m':5.0,    # maximum level of normalized resources\n",
     "\n",
-    "    'num_m':150,\n",
-    "    'T': 20,\n",
+    "    'max_C':10.0,   # maximum level of consumption in iEGM precomputation\n",
     "\n",
-    "    'simN':10_000,\n",
+    "    'T': 20,        # number of periods\n",
+    "    'simN':10_000,  # number of agents in simulation\n",
     "\n",
     "} "
    ]
@@ -151,10 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specs_true = specs.copy()\n",
-    "specs_true['num_m'] = 500\n",
-    "\n",
-    "model_true = BufferStockModelClass(par=specs_true)\n",
+    "model_true = BufferStockModelClass(par={**specs,'num_m':500})\n",
     "model_true.solve()"
    ]
   },
@@ -169,249 +166,34 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/200 running...\n",
-      "2/200 running...\n",
-      "3/200 running...\n",
-      "4/200 running...\n",
-      "5/200 running...\n",
-      "6/200 running...\n",
-      "7/200 running...\n",
-      "8/200 running...\n",
-      "9/200 running...\n",
-      "10/200 running...\n",
-      "11/200 running...\n",
-      "12/200 running...\n",
-      "13/200 running...\n",
-      "14/200 running...\n",
-      "15/200 running...\n",
-      "16/200 running...\n",
-      "17/200 running...\n",
-      "18/200 running...\n",
-      "19/200 running...\n",
-      "20/200 running...\n",
-      "21/200 running...\n",
-      "22/200 running...\n",
-      "23/200 running...\n",
-      "24/200 running...\n",
-      "25/200 running...\n",
-      "26/200 running...\n",
-      "27/200 running...\n",
-      "28/200 running...\n",
-      "29/200 running...\n",
-      "30/200 running...\n",
-      "31/200 running...\n",
-      "32/200 running...\n",
-      "33/200 running...\n",
-      "34/200 running...\n",
-      "35/200 running...\n",
-      "36/200 running...\n",
-      "37/200 running...\n",
-      "38/200 running...\n",
-      "39/200 running...\n",
-      "40/200 running...\n",
-      "41/200 running...\n",
-      "42/200 running...\n",
-      "43/200 running...\n",
-      "44/200 running...\n",
-      "45/200 running...\n",
-      "46/200 running...\n",
-      "47/200 running...\n",
-      "48/200 running...\n",
-      "49/200 running...\n",
-      "50/200 running...\n",
-      "51/200 running...\n",
-      "52/200 running...\n",
-      "53/200 running...\n",
-      "54/200 running...\n",
-      "55/200 running...\n",
-      "56/200 running...\n",
-      "57/200 running...\n",
-      "58/200 running...\n",
-      "59/200 running...\n",
-      "60/200 running...\n",
-      "61/200 running...\n",
-      "62/200 running...\n",
-      "63/200 running...\n",
-      "64/200 running...\n",
-      "65/200 running...\n",
-      "66/200 running...\n",
-      "67/200 running...\n",
-      "68/200 running...\n",
-      "69/200 running...\n",
-      "70/200 running...\n",
-      "71/200 running...\n",
-      "72/200 running...\n",
-      "73/200 running...\n",
-      "74/200 running...\n",
-      "75/200 running...\n",
-      "76/200 running...\n",
-      "77/200 running...\n",
-      "78/200 running...\n",
-      "79/200 running...\n",
-      "80/200 running...\n",
-      "81/200 running...\n",
-      "82/200 running...\n",
-      "83/200 running...\n",
-      "84/200 running...\n",
-      "85/200 running...\n",
-      "86/200 running...\n",
-      "87/200 running...\n",
-      "88/200 running...\n",
-      "89/200 running...\n",
-      "90/200 running...\n",
-      "91/200 running...\n",
-      "92/200 running...\n",
-      "93/200 running...\n",
-      "94/200 running...\n",
-      "95/200 running...\n",
-      "96/200 running...\n",
-      "97/200 running...\n",
-      "98/200 running...\n",
-      "99/200 running...\n",
-      "100/200 running...\n",
-      "101/200 running...\n",
-      "102/200 running...\n",
-      "103/200 running...\n",
-      "104/200 running...\n",
-      "105/200 running...\n",
-      "106/200 running...\n",
-      "107/200 running...\n",
-      "108/200 running...\n",
-      "109/200 running...\n",
-      "110/200 running...\n",
-      "111/200 running...\n",
-      "112/200 running...\n",
-      "113/200 running...\n",
-      "114/200 running...\n",
-      "115/200 running...\n",
-      "116/200 running...\n",
-      "117/200 running...\n",
-      "118/200 running...\n",
-      "119/200 running...\n",
-      "120/200 running...\n",
-      "121/200 running...\n",
-      "122/200 running...\n",
-      "123/200 running...\n",
-      "124/200 running...\n",
-      "125/200 running...\n",
-      "126/200 running...\n",
-      "127/200 running...\n",
-      "128/200 running...\n",
-      "129/200 running...\n",
-      "130/200 running...\n",
-      "131/200 running...\n",
-      "132/200 running...\n",
-      "133/200 running...\n",
-      "134/200 running...\n",
-      "135/200 running...\n",
-      "136/200 running...\n",
-      "137/200 running...\n",
-      "138/200 running...\n",
-      "139/200 running...\n",
-      "140/200 running...\n",
-      "141/200 running...\n",
-      "142/200 running...\n",
-      "143/200 running...\n",
-      "144/200 running...\n",
-      "145/200 running...\n",
-      "146/200 running...\n",
-      "147/200 running...\n",
-      "148/200 running...\n",
-      "149/200 running...\n",
-      "150/200 running...\n",
-      "151/200 running...\n",
-      "152/200 running...\n",
-      "153/200 running...\n",
-      "154/200 running...\n",
-      "155/200 running...\n",
-      "156/200 running...\n",
-      "157/200 running...\n",
-      "158/200 running...\n",
-      "159/200 running...\n",
-      "160/200 running...\n",
-      "161/200 running...\n",
-      "162/200 running...\n",
-      "163/200 running...\n",
-      "164/200 running...\n",
-      "165/200 running...\n",
-      "166/200 running...\n",
-      "167/200 running...\n",
-      "168/200 running...\n",
-      "169/200 running...\n",
-      "170/200 running...\n",
-      "171/200 running...\n",
-      "172/200 running...\n",
-      "173/200 running...\n",
-      "174/200 running...\n",
-      "175/200 running...\n",
-      "176/200 running...\n",
-      "177/200 running...\n",
-      "178/200 running...\n",
-      "179/200 running...\n",
-      "180/200 running...\n",
-      "181/200 running...\n",
-      "182/200 running...\n",
-      "183/200 running...\n",
-      "184/200 running...\n",
-      "185/200 running...\n",
-      "186/200 running...\n",
-      "187/200 running...\n",
-      "188/200 running...\n",
-      "189/200 running...\n",
-      "190/200 running...\n",
-      "191/200 running...\n",
-      "192/200 running...\n",
-      "193/200 running...\n",
-      "194/200 running...\n",
-      "195/200 running...\n",
-      "196/200 running...\n",
-      "197/200 running...\n",
-      "198/200 running...\n",
-      "199/200 running...\n",
-      "200/200 running...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "PRINT = True\n",
+    "PRINT = False\n",
     "# setup Monte Carlo results containers\n",
     "timing = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
+    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
+    "\n",
     "    'iegm, linear':dict(),\n",
     "    'iegm, linear inverse':dict(),\n",
-    "\n",
-    "    'iegm, Bspline':dict(),\n",
-    "    'iegm, Bspline inverse':dict(),\n",
-    "\n",
-    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
+    "    \n",
     "}\n",
     "error = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
+    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
+    "\n",
     "    'iegm, linear':dict(),\n",
     "    'iegm, linear inverse':dict(),\n",
-    "    \n",
-    "    'iegm, Bspline':dict(),\n",
-    "    'iegm, Bspline inverse':dict(),\n",
-    "\n",
-    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "util = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
+    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
+    "    \n",
     "    'iegm, linear':dict(),\n",
     "    'iegm, linear inverse':dict(),\n",
-    "    \n",
-    "    'iegm, Bspline':dict(),\n",
-    "    'iegm, Bspline inverse':dict(),\n",
-    "\n",
-    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "for i_c,num_C in enumerate(C_num_grid):\n",
     "    timing['iegm, linear'][num_C] = np.nan + np.zeros(MC_num)\n",
@@ -421,14 +203,6 @@
     "    timing['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "    error['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "    util['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "\n",
-    "    timing['iegm, Bspline'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    error['iegm, Bspline'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    util['iegm, Bspline'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "\n",
-    "    timing['iegm, Bspline inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    error['iegm, Bspline inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    util['iegm, Bspline inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
     "# loop over Monte Carlo simulations\n",
     "for i_mc in range(MC_num):\n",
@@ -460,7 +234,7 @@
     "\n",
     "    # iEGM\n",
     "    model.par.method = 'iegm'\n",
-    "    for interp_method in ('linear','Bspline'):\n",
+    "    for interp_method in ('linear',):\n",
     "        for interp_inverse in (False,True):\n",
     "            model.par.interp_method = interp_method\n",
     "            model.par.interp_inverse = interp_inverse\n",
@@ -504,49 +278,34 @@
      "text": [
       "lifetime util & Timing (rel. to VFI)\n",
       "vfi: 0.000 & 1.000 \n",
-      "egm: 0.000 & 0.064 \n",
-      "egm, numerical: 0.000 & 0.112 \n",
+      "egm: 0.000 & 0.063 \n",
+      "egm, numerical: 0.000 & 0.111 \n",
       "iegm, linear: \n",
-      "20 0.282 & 0.065 \n",
-      "50 0.062 & 0.065 \n",
-      "100 0.011 & 0.065 \n",
-      "200 0.002 & 0.065 \n",
+      "20 0.791 & 0.064 \n",
+      "50 0.081 & 0.064 \n",
+      "100 0.015 & 0.064 \n",
+      "200 0.003 & 0.064 \n",
       "iegm, linear inverse: \n",
-      "20 0.090 & 0.065 \n",
-      "50 0.011 & 0.065 \n",
-      "100 0.002 & 0.065 \n",
-      "200 0.000 & 0.065 \n",
-      "iegm, Bspline: \n",
-      "20 0.016 & 0.074 \n",
-      "50 0.001 & 0.074 \n",
-      "100 0.000 & 0.074 \n",
-      "200 0.000 & 0.074 \n",
-      "iegm, Bspline inverse: \n",
-      "20 0.002 & 0.075 \n",
-      "50 0.000 & 0.075 \n",
-      "100 0.000 & 0.075 \n",
-      "200 0.000 & 0.075 \n"
+      "20 0.197 & 0.064 \n",
+      "50 0.014 & 0.064 \n",
+      "100 0.003 & 0.064 \n",
+      "200 0.000 & 0.064 \n"
      ]
     }
    ],
    "source": [
-    "# print('Euler Error & lifetime util & Timing (rel. to VFI)')\n",
     "print('lifetime util & Timing (rel. to VFI)')\n",
     "timing_vfi = np.mean(timing['vfi'])\n",
     "for method in ('vfi','egm','egm, numerical'):\n",
-    "    error_now = np.mean(error[method])\n",
     "    util_now = np.mean(util[method])\n",
     "    time_now = np.mean(timing[method]) / timing_vfi\n",
-    "    # print(f'{method}: {error_now:2.2f} &  {util_now:2.2f} & {time_now:2.2f} ')\n",
     "    print(f'{method}: {util_now:2.3f} & {time_now:2.3f} ')\n",
     "\n",
-    "for method in ('iegm, linear','iegm, linear inverse','iegm, Bspline','iegm, Bspline inverse'):\n",
+    "for method in ('iegm, linear','iegm, linear inverse'):\n",
     "    print(f'{method}: ')\n",
     "    for i_c,num_C in enumerate(C_num_grid):\n",
-    "        error_now = np.mean(error[method][num_C]) \n",
     "        util_now = np.mean(util[method][num_C]) \n",
     "        time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
-    "        # print(f'{num_C:d} {error_now:2.3f} & {util_now:2.3f} & {time_now:2.3f} ')\n",
     "        print(f'{num_C:d} {util_now:2.3f} & {time_now:2.3f} ')"
    ]
   }
