bug(simulate): power if not repartnering

--- a/02. LimitedCommmitmentModel.ipynb
+++ b/02. LimitedCommmitmentModel.ipynb
@@ -50,18 +50,16 @@
     "       'T':20,\n",
     "       'p_meet': 0.1, \n",
     "       'div_A_share': 0.5, \n",
-    "       'sigma_love':0.1,\n",
-    "       'threads':threads, \n",
-    "       'interp_power':False,\n",
+    "       'sigma_love':0.1, \n",
+    "\n",
     "       'num_love': 21, \n",
-    "       'do_egm':True, \n",
     "       'num_A': 50, \n",
     "       'num_A_pd':50,\n",
-    "       'num_Ctot':50,\n",
+    "\n",
     "       'simT':20,\n",
     "       'simN': 10000,\n",
-    "       'centered_gradient':True,\n",
-    "       'use_external_solution':True,\n",
+    "\n",
+    "       'threads':threads,\n",
     "       }"
    ]
   },
@@ -78,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specs_true = {'true': {'latexname':'true', 'par':{**settings, 'do_egm':False, 'num_A': 350, 'num_Ctot':150, 'num_power':151, 'num_love':151}}}\n",
+    "# specs_true = {'true': {'latexname':'true', 'par':{**settings, 'do_egm':False,'precompute_intratemporal':False, 'num_A': 250, 'num_power':151, 'num_love':151}}}\n",
+    "specs_true = {'true': {'latexname':'true', 'par':{**settings, 'do_egm':False,'precompute_intratemporal':True, 'num_A': 250, 'num_power':151, 'num_love':151}}}\n",
     "\n",
     "model_true = lcm.HouseholdModelClass(par=specs_true['true']['par'])\n",
     "model_true.link_to_cpp(force_compile=do_compile)\n",
@@ -189,178 +188,7 @@
       "26/200 running...\n",
       "27/200 running...\n",
       "28/200 running...\n",
-      "29/200 running...\n",
-      "30/200 running...\n",
-      "31/200 running...\n",
-      "32/200 running...\n",
-      "33/200 running...\n",
-      "34/200 running...\n",
-      "35/200 running...\n",
-      "36/200 running...\n",
-      "37/200 running...\n",
-      "38/200 running...\n",
-      "39/200 running...\n",
-      "40/200 running...\n",
-      "41/200 running...\n",
-      "42/200 running...\n",
-      "43/200 running...\n",
-      "44/200 running...\n",
-      "45/200 running...\n",
-      "46/200 running...\n",
-      "47/200 running...\n",
-      "48/200 running...\n",
-      "49/200 running...\n",
-      "50/200 running...\n",
-      "51/200 running...\n",
-      "52/200 running...\n",
-      "53/200 running...\n",
-      "54/200 running...\n",
-      "55/200 running...\n",
-      "56/200 running...\n",
-      "57/200 running...\n",
-      "58/200 running...\n",
-      "59/200 running...\n",
-      "60/200 running...\n",
-      "61/200 running...\n",
-      "62/200 running...\n",
-      "63/200 running...\n",
-      "64/200 running...\n",
-      "65/200 running...\n",
-      "66/200 running...\n",
-      "67/200 running...\n",
-      "68/200 running...\n",
-      "69/200 running...\n",
-      "70/200 running...\n",
-      "71/200 running...\n",
-      "72/200 running...\n",
-      "73/200 running...\n",
-      "74/200 running...\n",
-      "75/200 running...\n",
-      "76/200 running...\n",
-      "77/200 running...\n",
-      "78/200 running...\n",
-      "79/200 running...\n",
-      "80/200 running...\n",
-      "81/200 running...\n",
-      "82/200 running...\n",
-      "83/200 running...\n",
-      "84/200 running...\n",
-      "85/200 running...\n",
-      "86/200 running...\n",
-      "87/200 running...\n",
-      "88/200 running...\n",
-      "89/200 running...\n",
-      "90/200 running...\n",
-      "91/200 running...\n",
-      "92/200 running...\n",
-      "93/200 running...\n",
-      "94/200 running...\n",
-      "95/200 running...\n",
-      "96/200 running...\n",
-      "97/200 running...\n",
-      "98/200 running...\n",
-      "99/200 running...\n",
-      "100/200 running...\n",
-      "101/200 running...\n",
-      "102/200 running...\n",
-      "103/200 running...\n",
-      "104/200 running...\n",
-      "105/200 running...\n",
-      "106/200 running...\n",
-      "107/200 running...\n",
-      "108/200 running...\n",
-      "109/200 running...\n",
-      "110/200 running...\n",
-      "111/200 running...\n",
-      "112/200 running...\n",
-      "113/200 running...\n",
-      "114/200 running...\n",
-      "115/200 running...\n",
-      "116/200 running...\n",
-      "117/200 running...\n",
-      "118/200 running...\n",
-      "119/200 running...\n",
-      "120/200 running...\n",
-      "121/200 running...\n",
-      "122/200 running...\n",
-      "123/200 running...\n",
-      "124/200 running...\n",
-      "125/200 running...\n",
-      "126/200 running...\n",
-      "127/200 running...\n",
-      "128/200 running...\n",
-      "129/200 running...\n",
-      "130/200 running...\n",
-      "131/200 running...\n",
-      "132/200 running...\n",
-      "133/200 running...\n",
-      "134/200 running...\n",
-      "135/200 running...\n",
-      "136/200 running...\n",
-      "137/200 running...\n",
-      "138/200 running...\n",
-      "139/200 running...\n",
-      "140/200 running...\n",
-      "141/200 running...\n",
-      "142/200 running...\n",
-      "143/200 running...\n",
-      "144/200 running...\n",
-      "145/200 running...\n",
-      "146/200 running...\n",
-      "147/200 running...\n",
-      "148/200 running...\n",
-      "149/200 running...\n",
-      "150/200 running...\n",
-      "151/200 running...\n",
-      "152/200 running...\n",
-      "153/200 running...\n",
-      "154/200 running...\n",
-      "155/200 running...\n",
-      "156/200 running...\n",
-      "157/200 running...\n",
-      "158/200 running...\n",
-      "159/200 running...\n",
-      "160/200 running...\n",
-      "161/200 running...\n",
-      "162/200 running...\n",
-      "163/200 running...\n",
-      "164/200 running...\n",
-      "165/200 running...\n",
-      "166/200 running...\n",
-      "167/200 running...\n",
-      "168/200 running...\n",
-      "169/200 running...\n",
-      "170/200 running...\n",
-      "171/200 running...\n",
-      "172/200 running...\n",
-      "173/200 running...\n",
-      "174/200 running...\n",
-      "175/200 running...\n",
-      "176/200 running...\n",
-      "177/200 running...\n",
-      "178/200 running...\n",
-      "179/200 running...\n",
-      "180/200 running...\n",
-      "181/200 running...\n",
-      "182/200 running...\n",
-      "183/200 running...\n",
-      "184/200 running...\n",
-      "185/200 running...\n",
-      "186/200 running...\n",
-      "187/200 running...\n",
-      "188/200 running...\n",
-      "189/200 running...\n",
-      "190/200 running...\n",
-      "191/200 running...\n",
-      "192/200 running...\n",
-      "193/200 running...\n",
-      "194/200 running...\n",
-      "195/200 running...\n",
-      "196/200 running...\n",
-      "197/200 running...\n",
-      "198/200 running...\n",
-      "199/200 running...\n",
-      "200/200 running...\n"
+      "29/200 running...\n"
      ]
     }
    ],
@@ -454,29 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lifetime utility & Timing (rel. to VFI)\n",
-      "vfi: 0.982 & 1.000 \n",
-      "egm, numerical: 0.982 & 0.301 \n",
-      "iegm, linear: \n",
-      "20 0.998 & 0.020 \n",
-      "50 0.982 & 0.021 \n",
-      "100 0.982 & 0.021 \n",
-      "200 0.982 & 0.021 \n",
-      "iegm, linear inverse: \n",
-      "20 0.982 & 0.020 \n",
-      "50 0.982 & 0.021 \n",
-      "100 0.982 & 0.021 \n",
-      "200 0.982 & 0.021 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Lifetime utility & Timing (rel. to VFI)')\n",
     "timing_vfi = np.nanmean(timing['vfi'])\n",
@@ -510,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
