mc: limited commitment

--- a/02. LimitedCommmitmentModel.ipynb
+++ b/02. LimitedCommmitmentModel.ipynb
@@ -155,6 +155,17 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup alternative model solution\n",
+    "model = lcm.HouseholdModelClass(par=settings)\n",
+    "model.link_to_cpp(force_compile=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -373,11 +384,9 @@
     "    model_true.simulate()\n",
     "    true_mean_lifetime_util = model_true.sim.mean_lifetime_util\n",
     "\n",
-    "    # setup alternative model solutios\n",
-    "    model = lcm.HouseholdModelClass(par=settings)\n",
+    "    # re-draw for alternative model\n",
     "    model.par.seed = i_mc\n",
     "    model.allocate()\n",
-    "    model.link_to_cpp(force_compile=False)\n",
     "\n",
     "    # VFI\n",
     "    if do_VFI:\n",
@@ -434,8 +443,6 @@
     "            # Lifetime utility error\n",
     "            model.simulate()\n",
     "            util[method][num_C][i_mc] = np.abs((model.sim.mean_lifetime_util - true_mean_lifetime_util)/true_mean_lifetime_util) * 100\n",
-    "            \n",
-    "    model.cpp.delink()\n",
     "\n",
     "    # save MC objects\n",
     "    with open('output/MC_timing.pkl', 'wb') as f:\n",
@@ -453,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -461,18 +468,18 @@
      "output_type": "stream",
      "text": [
       "Lifetime utility & Timing (rel. to VFI)\n",
-      "vfi: 0.982 & 1.000 \n",
-      "egm, numerical: 0.982 & 0.271 \n",
+      "vfi: 0.094 & 1.000 \n",
+      "egm, numerical: 0.094 & 0.289 \n",
       "iegm, linear: \n",
-      "20 0.998 & 0.016 \n",
-      "50 0.982 & 0.017 \n",
-      "100 0.982 & 0.017 \n",
-      "200 0.982 & 0.017 \n",
+      "20 0.108 & 0.021 \n",
+      "50 0.095 & 0.021 \n",
+      "100 0.094 & 0.021 \n",
+      "200 0.094 & 0.021 \n",
       "iegm, linear inverse: \n",
-      "20 0.982 & 0.016 \n",
-      "50 0.982 & 0.017 \n",
-      "100 0.982 & 0.017 \n",
-      "200 0.982 & 0.017 \n"
+      "20 0.095 & 0.021 \n",
+      "50 0.094 & 0.021 \n",
+      "100 0.094 & 0.021 \n",
+      "200 0.094 & 0.021 \n"
      ]
     }
    ],
@@ -509,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
